@@ -1,5 +1,10 @@
 2010-01-04  Daniel Gutson  <dgutson@codesourcery.com>
 
+	* gas/arm/neon-logic.d: New test case.
+	* gas/arm/neon-logic.s: New file.
+
+2010-01-04  Daniel Gutson  <dgutson@codesourcery.com>
+
 	* gas/arm/neon-addressing-bad.d: New test case.
 	* gas/arm/neon-addressing-bad.s: New file.
 	* gas/arm/neon-addressing-bad.l: New file.
